fix: 增加shell部署脚本